# hurdle-payment-sc

./: .gitignore  Cargo.toml  build.sh
neardev/: dev-account  dev-account.env
src/: account.rs  internal.rs  lib.rs  transfer_transaction.rs  util.rs
