[package]
name = "hurdle-payment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
chrono = "0.4"

[dev-dependencies]
near-sdk = "3.1.0"

[profile.release]
codegen-units = 1
opt-level = 2
lto = true
debug = false
panic = "abort"
overflow-checks = true
